# embedded-generic-library

./: CMakeLists.txt  egl_lib.h
block/: CMakeLists.txt
clock/: egl_clock.c  egl_clock.h
components/: CMakeLists.txt
components/log/: CMakeLists.txt  egl_log.c  egl_log.h  egl_log_front.c  egl_log_front.h  egl_log_front_bare.c  egl_log_front_bare.h  egl_log_front_os.c  egl_log_front_os.h
components/result/: egl_result.c  egl_result.h
components/system/: CMakeLists.txt  egl_system.c  egl_system.h
components/trace/: egl_trace.c
drivers/: CMakeLists.txt
drivers/rfm66/: CMakeLists.txt  egl_rfm66.c  egl_rfm66.h  egl_rfm66_driver.c  egl_rfm66_driver.h  egl_rfm66_iface.c  egl_rfm66_iface.h
drivers/rfm69/: CMakeLists.txt  egl_rfm69.c  egl_rfm69.h  egl_rfm69_driver.c  egl_rfm69_driver.h  egl_rfm69_iface.c  egl_rfm69_iface.h
hal/: CMakeLists.txt  egl_block.h  egl_clock.h  egl_crc.h  egl_iface.h  egl_pio.h  egl_plat.h  egl_pm.h  egl_timer.h  egl_value.h
hal/block/: egl_block.c  egl_block.h
hal/clock/: CMakeLists.txt  egl_clock.c  egl_clock.h
hal/crc/: CMakeLists.txt  egl_crc.c  egl_crc.h
hal/iface/: CMakeLists.txt  egl_iface.c  egl_iface.h
hal/interface/: egl_interface.c  egl_interface.h
hal/pio/: egl_pio.c  (+1 more)
interface/: CMakeLists.txt
os/: CMakeLists.txt  egl_os.c  egl_os.h
os/port/threadx/: CMakeLists.txt  egl_os_threadx.c  egl_os_threadx.h
pio/: CMakeLists.txt
plat/: egl_plat.c  egl_plat.h
pm/: egl_pm.c
result/: CMakeLists.txt  egl_result.h
timer/: egl_timer.c  egl_timer.h
trace/: CMakeLists.txt  egl_trace.h
util/: egl_util.h
(+13 files in other folders)
